# CppTeachingProject

./: CMakeLists.txt  README.md
0_hello_world/: helloworld.cpp
1_simple_cli_apps/: cli_args_and_help.cpp  feet_converter.cpp  force_cmd_size.cpp  get_cmd_option.cpp  sleep_example.cpp  sleep_example_chrono.cpp
2_algorithms/: bubble_sort.cpp  bubble_sort_objects.cpp  bubble_sort_objects_generic.cpp
2_pointers_and_references/: pointers.cpp
4_datastructures/vgtu/: BinarySearchTree.cpp
cli_programs/: 1_lauch_console_with_any_size.cpp  open_console.cpp
console_games/01_snake/: snake.cpp
console_games/02_tetris/: tetris.cpp
oop/: Person.cpp  Person.hpp  main.cpp  oop_intro.cpp
pagalba_studenteams/: 2020_05_14_verslo_partneriai.cpp  data.txt
